--- a/Qmatrix Design/biblio.bib
+++ b/Qmatrix Design/biblio.bib
@@ -167,8 +167,23 @@
   publisher={Springer}
 }
 
+@Article{Culpepper2015,
+    title = {Bayesian estimation of the DINA model with Gibbs
+      sampling},
+    author = {Steven Andrew Culpepper},
+    journal = {Journal of Educational and Behavioral Statistics},
+    year = {2015},
+    url = {http://www.hermanaguinis.com/pubs.html},
+    pdf = {http://www.hermanaguinis.com/ORM2015.pdf},
+    volume = {40},
+    number = {5},
+    pages = {454-476},
+    year = {2015},
+    doi = {10.3102/1076998615595403},
+  }
+  
 @article{de2008empirically,
-  title={An Empirically Based Method of {Q-Matrix} Validation for the DINA Model: Development and Applications},
+  title={An Empirically Based Method of Q-Matrix Validation for the DINA Model: Development and Applications},
   author={De La Torre, Jimmy},
   journal={Journal of educational measurement},
   volume={45},
@@ -210,7 +225,7 @@
 }
 
 @inproceedings{desmarais2013matrix,
-  title={A matrix factorization method for mapping items to skills and for enhancing expert-based {Q-matrices}},
+  title={A matrix factorization method for mapping items to skills and for enhancing expert-based q-matrices},
   author={Desmarais, Michel C and Naceur, Rhouma},
   booktitle={Artificial Intelligence in Education},
   pages={441--450},
@@ -226,7 +241,7 @@
 }
 
 @inproceedings{desmarais2015combining,
-  title={Combining techniques to refine item to skills {Q-matrices} with a partition tree},
+  title={Combining techniques to refine item to skills Q-matrices with a partition tree},
   author={Desmarais, Michel C and Xu, Peng and Beheshti, Behzad},
   booktitle={Educational Data Mining 2015},
   year={2015}
@@ -240,7 +255,7 @@
 }
 
 @incollection{durand2015evaluation,
-  title={Evaluation of expert-based {Q-matrices} predictive quality in matrix factorization models},
+  title={Evaluation of expert-based Q-matrices predictive quality in matrix factorization models},
   author={Durand, Guillaume and Belacel, Nabil and Goutte, Cyril},
   booktitle={Design for Teaching and Learning in a Networked World},
   pages={56--69},
@@ -541,7 +556,7 @@
 }
 
 @article{romero2014detection,
-  title={Detection of {Q-Matrix} Misspecification Using Two Criteria for Validation of Cognitive Structures under the Least Squares Distance Model.},
+  title={Detection of Q-Matrix Misspecification Using Two Criteria for Validation of Cognitive Structures under the Least Squares Distance Model.},
   author={Romero, Sonia J and Ordo{\~n}ez, Xavier G and Ponsoda, Vincente and Revuelta, Javier},
   journal={Psicologica: International Journal of Methodology and Experimental Psychology},
   volume={35},
@@ -692,7 +707,7 @@
 }
 
 @phdthesis{xiang2013nonlinear,
-  title={Nonlinear penalized estimation of true {Q-Matrix} in cognitive diagnostic models},
+  title={Nonlinear penalized estimation of true Q-Matrix in cognitive diagnostic models},
   author={Xiang, Rui},
   year={2013},
   school={Columbia University}
